k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hutulock
  labels:
    app.kubernetes.io/name: hutulock
